# PCHEFitting

./: CMakeLists.txt  aboutdialog.ui  addcorrelation.cpp  addcorrelation.h  addcorrelation.ui  addnewfluidwindow.cpp  addnewfluidwindow.h  addnewfluidwindow.ui  config.csv  correlation.cpp  correlation.h  correlations.csv  data.qrc  fluids.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcheconfig.cpp  pcheconfig.h  pcheconfig.ui
